# hpc

./: CMakeLists.txt  README.md  homework2.cpp
ch03/aliasing/: aliasing.cpp
ch03/align/: a.out  c++17.cpp
ch03/fma/: cxxfma512.cpp  fma512.c  fma512.h
ch03/hash/: Makefile  batchcache  batchcache.c  batchload  batchload1  batchload2
ch03/locality/: hash  hash.cpp
ch03/matmul/: matmul.cpp  matmul.opt.cpp
ch03/matrixversion/: matrixknmkn.cpp  matrixmkn.cpp  matrixmnk.cpp  matrixopt.cpp  topdown
ch03/roofline/: roof.cpp
ch03/topdown/: topdown.cpp  topdown.no.assign.cpp
gpucode/: transpose.cpp
gpucode/cudagray/: cudagray.cu
gpucode/cudalib/: StreamPriorities.cu
gpucode/kernels/BankRedux/: sum_cuda.c  sum_cudakernel.cu
gpucode/kernels/WarpDivRedux/: Makefile  warpDivergenceTest_cuda  warpDivergenceTest_cuda.c  warpDivergenceTest_cudakernel.cu
gpucode/kernels/coalescing/: coalescing.cu  compile.sh  transpose.cu
gpucode/kernels/one_stencil/: Makefile  one_stencil.cu  one_stencil_shm.cu
homework3/: conv.cpp  gather.cpp  permute.cpp
openmp/omp/: conflicts.cpp  copyprivate.cpp  default.cpp  firstomp.cpp  master.cpp  pthreads.cpp  sections.cpp  single.cpp
openmp/pi/: atomic-pi.cpp  compile-pi.sh  critical-pi.cpp  false-share-pi.cpp  omit-false-share-pi.cpp  reduction-pi.cpp  run.O0.sh  run.sh  task-pi.cpp
openmp/prime/: prime-dynamic.cpp  prime-static.cpp
openmp/task/: taskgroup.cpp  taskwait.cpp
practice/cpp/: ch02.cpp  ch02.h
practice/cuda/: addVectors.cpp  addVectors.h
pthread/: condvar.cpp  dotprod_mutex.cpp  multithreads.cpp  mutex.cpp  seq-queue.cpp  threadcreate.cpp
